[package]
name = "UnifyAll"
version = "0.1.1"
authors = ["Neo Mannskär <neo.mannskar@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Unify is a simple build script CLI-tool meant to simplify the compilation of large codebases"
repository = "https://github.com/neomannskar/UnifyAll"
homepage = "https://mannskar.com/software/UnifyAll"
documentation = "https://docs.rs/UnifyAll"
keywords = ["cli", "build", "automation"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
colored = "3.0.0"
